# mVideo-Player

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoplayer.cpp  videoplayer.h  videoplayerwidget.ui
